--- a/app.css
+++ b/app.css
@@ -17,52 +17,57 @@
 #js-restart-btn {
 } */
 
-#intro-page {
-  display: flex;
-  justify-content: center;
-}
+@media screen and (max-width: 1920px) {
+  #intro-page {
+    display: flex;
+    justify-content: center;
+  }
 
-.circle {
-  height: 400px;
-  border-radius: 50%;
-  border: 11px solid black;
-}
+  .circle {
+    height: 400px;
+    border-radius: 50%;
+    border: 11px solid black;
+  }
 
-img:hover {
-  transform: scale(1.05);
-}
+  img:hover {
+    transform: scale(1.05);
+  }
 
-#answer,
-#btnAnswer {
-  display: inline-block;
-}
+  #answer,
+  #btnAnswer {
+    display: inline-block;
+  }
 
-#rick-intro {
-  display: flex;
-  justify-content: center;
-  margin-top: 60px;
-  font-size: 34px;
-}
+  #rick-intro {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    font-size: 34px;
+    font-family: 'Get Schwifty Regular';
+  }
 
-#intro-info {
-  flex-direction: column;
-  align-items: left;
-  flex-wrap: wrap;
-  padding-top: 60px;
-  padding-left: 90px;
-}
+  #intro-info {
+    flex-direction: column;
+    align-items: left;
+    flex-wrap: wrap;
+    padding-top: 60px;
+    padding-left: 90px;
+    color: #97ce4c;
+    text-shadow: 5px 5px 10px #97ce4c;
+  }
 
-#schwift {
-  margin-top: 2%;
-}
+  #schwift {
+    margin-top: 2%;
+  }
 
-#next-question {
-  display: none;
-}
+  #next-question {
+    display: none;
+  }
 
-body {
-  background-image: url('./Images/mortybackground.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: fixed;
+  body {
+    background-image: url('./Images/mortybackground.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 40%;
+  }
 }
